<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact_Us">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_us_on"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/call_us"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cell_no_1"
                    android:id="@+id/call_no_1"
                    android:layout_toRightOf="@id/call_us"
                    android:padding="5dp"
                    android:onClick="callNoOne"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cell_no_2"
                    android:id="@+id/call_no_2"
                    android:layout_toRightOf="@id/call_us"
                    android:layout_below="@id/call_no_1"
                    android:padding="5dp"
                    android:onClick="callNoTwo"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cell_no_3"
                    android:id="@+id/call_no_3"
                    android:layout_toRightOf="@id/call_us"
                    android:layout_below="@id/call_no_2"
                    android:padding="5dp"
                    android:onClick="callNoThree"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell_no_3"
            android:id="@+id/call_no_4"
            android:layout_toRightOf="@id/call_us"
            android:layout_below="@id/call_no_3"
            android:padding="5dp"
            android:onClick="callNoFour"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>




        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/call_no_4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailtext"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="enquiry.popular@gmail.com"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>


                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:lines="1"
                        android:gravity="start|top" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Contact No:"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

                    <EditText
                        android:id="@+id/phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:lines="1"
                        android:gravity="start|top" />




                    <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>


            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:nestedScrollingEnabled="true"
                android:lines="5"
                android:gravity="start|top" />

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:paddingTop="5dp"
                android:text="Send"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:text="@string/address_head"
                android:paddingTop="5dp"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:text="@string/addresslines"/>
            </LinearLayout>
            </RelativeLayout>
    </ScrollView>





    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout >